test: include test for FindCommand and its parser
Closes #67